err/moola.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/moola'...
Listing './lib/python3.5/site-packages/moola/adaptors'...
Listing './lib/python3.5/site-packages/moola/algorithms'...
Compiling './lib/python3.5/site-packages/moola/algorithms/bfgs.py'...
***   File "./lib/python3.5/site-packages/moola/algorithms/bfgs.py", line 20
    print "in matvec"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/moola/algorithms/fletcher_reeves.py'...
***   File "./lib/python3.5/site-packages/moola/algorithms/fletcher_reeves.py", line 24
    print 'Warning: tol argument not supported. Will be ignored.'
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/moola/algorithms/newton_cg.py'...
***   File "./lib/python3.5/site-packages/moola/algorithms/newton_cg.py", line 24
    print 'tol argument not supported. Will be ignored.'
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/moola/algorithms/nonlinear_cg.py'...
***   File "./lib/python3.5/site-packages/moola/algorithms/nonlinear_cg.py", line 24
    raise ValueError, 'tol argument not supported. Must be None'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/moola/algorithms/optimisation_algorithm.py'...
***   File "./lib/python3.5/site-packages/moola/algorithms/optimisation_algorithm.py", line 11
    raise NotImplementedError, 'OptimisationAlgorithm.__init__ is not implemented'
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/moola/algorithms/steepest_descent.py'...
***   File "./lib/python3.5/site-packages/moola/algorithms/steepest_descent.py", line 53
    if self.disp >0 : print self
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/moola/linalg'...
Compiling './lib/python3.5/site-packages/moola/linalg/vector.py'...
***   File "./lib/python3.5/site-packages/moola/linalg/vector.py", line 7
    raise NotImplementedError, "Vector.__getitem__ is not implemented"
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/moola/linesearch'...
Compiling './lib/python3.5/site-packages/moola/linesearch/armijo.py'...
***   File "./lib/python3.5/site-packages/moola/linesearch/armijo.py", line 32
    raise ValueError, "ftol must be > 0"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/moola/linesearch/dcsrch_fortran'...
Compiling './lib/python3.5/site-packages/moola/linesearch/dcsrch_fortran/linesearch.py'...
***   File "./lib/python3.5/site-packages/moola/linesearch/dcsrch_fortran/linesearch.py", line 43
    raise ValueError, "Direction must be a descent direction"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/moola/linesearch/dcsrch_fortran/pymswolfe.py'...
***   File "./lib/python3.5/site-packages/moola/linesearch/dcsrch_fortran/pymswolfe.py", line 107
    print ' linesearch returned; incorrect input values:'
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/moola/linesearch/dcsrch_fortran/setup.py'...
***   File "./lib/python3.5/site-packages/moola/linesearch/dcsrch_fortran/setup.py", line 14
    print 'No blas info found'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/moola/linesearch/line_search.py'...
***   File "./lib/python3.5/site-packages/moola/linesearch/line_search.py", line 18
    raise NotImplementedError, "Must be overloaded."
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/moola/linesearch/strong_wolfe.py'...
***   File "./lib/python3.5/site-packages/moola/linesearch/strong_wolfe.py", line 86
    print "Setting stepmax to ", stpmax
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/moola/misc'...
Compiling './lib/python3.5/site-packages/moola/misc/event_counter.py'...
***   File "./lib/python3.5/site-packages/moola/misc/event_counter.py", line 11
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/moola/problem'...
Compiling './lib/python3.5/site-packages/moola/problem/functional.py'...
***   File "./lib/python3.5/site-packages/moola/problem/functional.py", line 6
    raise NotImplementedError, "Functional.__call__ is not implemented."
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/moola-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
